# mcp-bookmark

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  install.sh  package.json  restart_instructions.md  test_boosting.sh  test_content_search.sh  test_extension_simplified.sh  test_full_output.sh  test_hybrid.sh  test_incremental.sh  test_incremental_simple.sh  test_mcp.py  test_mcp_debug.sh  test_mcp_manual.sh  test_mcp_search.sh  test_multi_index.sh  test_parallel.sh  test_phase1_snippets.sh  test_profile_folder.sh  test_search.sh  test_simple_search.sh  test_simplified_server.sh  test_token_limit.sh
.github/workflows/: release.yml
bookmark-indexer-extension/: README.md  background-parallel.js  background.js  batch-indexer.js  manifest.json  offscreen.html  offscreen.js  package.json  parallel.js  pnpm-lock.yaml  popup.html  popup.js
bookmark-indexer-extension/scripts/: setup-cmaps.js
docs/: ARCHITECTURE.md  SIMPLIFICATION.md  features.md  sow-tantivy-integration.md  sow.md  tantivy-maintenance.md
examples/: mcp-config-examples.json
scripts/: build-test.sh  mcp-test.js  release-test.sh  test-mcp-inspector.js  test-release.sh  test.sh  test_all_features.sh
src/: batch_manager.rs  bookmark.rs  chrome_profile.rs  config.rs  content.rs  lib.rs  main.rs  mcp_server.rs  pdf_processor.rs
src/search/: aggregator.rs  boosting.rs  common.rs  content_index.rs  hybrid.rs  indexer.rs  mcp_config.rs  mod.rs  multi_index.rs  query_parser.rs  readonly_index.rs  readonly_searcher.rs  schema.rs  scored_snippet.rs  search_manager.rs  search_manager_trait.rs  searcher.rs  smart_fetch.rs  snippet.rs  tokenizer.rs  unified_searcher.rs
tests/: chunk_transfer_test.rs  content_test.rs  integration_test.rs  japanese_search_test.rs  lindera_integration_test.rs  mcp_tools_test.rs  multi_index_test.rs  parallel_indexing_test.rs  phrase_search_test.rs  profile_test.rs  resource_test.rs  simple_lindera_test.rs  token_optimization_test.rs  utf8_safety_test.rs
