[package]
name = "mcp-bookmark"
version = "0.2.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
url = "2.5"
dirs = "5.0"
tantivy = "0.24"
lindera = "0.45"
lindera-tantivy = { version = "0.45", features = ["ipadic"] }
readability = "0.3"
async-trait = "0.1.89"
# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
regex = "1.11.3"

[[bin]]
name = "mcp-bookmark-native"
path = "src/bin/mcp-bookmark-native.rs"
required-features = []


[dev-dependencies]
tempfile = "3.8"
